# gcal-jni-lib

./: .gitignore  CMakeLists.txt  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
gradle/: gradle-daemon-jvm.properties
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  Android.mk.old  Application.mk  apc.cpp  apc.h  astro.cpp  astro.h  astro_arr.cpp  astro_base.cpp  astro_cr.cpp  astro_moon.cpp  astro_ms.cpp  astro_res.cpp  astro_sun.cpp  astro_w.cpp  avc.cpp  avc.h  gc_fb.cpp  gc_gstr.cpp  gc_ui.cpp  gcal.cpp  gcal.h  gmath.cpp  gmath.h  platform.h  tcommand.cpp  tcommand.h  tcountry.cpp  tcountry.h  tfile.cpp  tfile.h  tfileex.cpp  tfileex.h  tlocation.cpp  tlocation.h  trans.cpp  tstring.cpp  tstring.h  ttimezone.cpp  ttimezone.h
